# pytelemsys

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytrack.py
DataClasses/: Track.py
example/: test_pyfastf1.py  test_pytelem.py  test_pytrack.py
example/racetracks/: PistaAzzurra_2D.txt  Silverstone_2D.txt
example/telemetry/: MLT_PA_2025.csv
src/: filtering.py  postprocessing.py  track_data.py
src/pytelemsys/: __init__.py  pyfastf1.py  pytelem.py  pytrack.py
src/pytelemsys/converter/: __init__.py  gp2_converter.py  mlt_gp2_converter.py
src/pytelemsys/utils/: __init__.py  constants.py  conversion.py  estimation.py  processing.py  track.py  utils.py
tests/: test_pytelem.py  test_pytrack.py
utils/: estimation.py  utils.py
