[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytelemsys"
version = "0.1.0"
description = "Telemetry analysis tools"
authors = [{ name = "Giacomo Corradini", email = "giacomo.corradini@unitn.it" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["numpy", "pandas", "matplotlib", "scipy", "mplcursors"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytelemsys*"]
